// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsService Update single event field 1`] = `
Object {
  "_labels": Array [
    "Event",
  ],
  "age": 18,
  "category": "OFFLINE_EVENT",
  "description": "Some event",
  "lineups": Array [],
  "link": "https://localhost",
  "maxPerson": 45,
  "name": "Changed name",
  "price": 0,
  "purchaseLink": "https://localhost",
}
`;

exports[`EventsService create event 1`] = `
Object {
  "_labels": Array [
    "Event",
  ],
  "age": 18,
  "category": "OFFLINE_EVENT",
  "description": "Some event",
  "lineups": Array [],
  "link": "https://localhost",
  "maxPerson": 45,
  "name": "fistEvent",
  "price": 100,
  "purchaseLink": "https://localhost",
}
`;

exports[`EventsService update event 1`] = `
Object {
  "_labels": Array [
    "Event",
  ],
  "age": 0,
  "category": "OFFLINE_EVENT",
  "description": "Second",
  "lineups": Array [],
  "link": "https://234",
  "maxPerson": 0,
  "name": "second",
  "price": 2,
  "purchaseLink": "https://123",
}
`;
